--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-elements": "^3.4.2",
+    "react-native-floating-action": "^1.22.0",
     "react-native-pager-view": "5.4.24",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.9.1",
